--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,16 @@
 
 .idea/codeStyles/codeStyleConfig.xml
+
+.idea/codeStyles/Project.xml
+
+.idea/inspectionProfiles/Project_Default.xml
+
+.idea/modules.xml
+
+.idea/PatrickLaumond.iml
+
+.idea/scssLintPlugin.xml
+
+.idea/vcs.xml
+
+.idea/watcherTasks.xml
