--- a/client/package.json
+++ b/client/package.json
@@ -24,8 +24,12 @@
     "@fortawesome/fontawesome-free": "^6.4.0",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "angular-responsive-carousel": "^2.1.2",
+    "angular-slick-carousel": "^3.1.7",
     "flowbite": "^1.6.5",
+    "ngx-slick-carousel": "^15.0.0",
     "rxjs": "~7.8.0",
+    "slick-carousel": "^1.8.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
