--- a/client/package.json
+++ b/client/package.json
@@ -24,12 +24,11 @@
     "@fortawesome/fontawesome-free": "^6.4.0",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
-    "angular-responsive-carousel": "^2.1.2",
-    "angular-slick-carousel": "^3.1.7",
-    "flowbite": "^1.6.5",
-    "ngx-slick-carousel": "^15.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^14.1.1",
+    "@popperjs/core": "^2.11.6",
+    "bootstrap": "^5.2.3",
+    "ngx-bootstrap": "^10.2.0",
     "rxjs": "~7.8.0",
-    "slick-carousel": "^1.8.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
@@ -37,6 +36,7 @@
     "@angular-devkit/build-angular": "^15.2.4",
     "@angular/cli": "~15.2.4",
     "@angular/compiler-cli": "^15.2.0",
+    "@angular/localize": "^15.2.0",
     "@types/jasmine": "~4.3.0",
     "autoprefixer": "^10.4.14",
     "jasmine-core": "~4.5.0",
