--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,42 @@
+# See http://help.github.com/ignore-files/ for more about ignoring files.
 
-.idea/codeStyles/codeStyleConfig.xml
+# Compiled output
+/dist
+/tmp
+/out-tsc
+/bazel-out
 
-.idea/codeStyles/Project.xml
+# Node
+/node_modules
+npm-debug.log
+yarn-error.log
 
-.idea/inspectionProfiles/Project_Default.xml
+# IDEs and editors
+.idea/
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
 
-.idea/modules.xml
+# Visual Studio Code
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+.history/*
 
-.idea/PatrickLaumond.iml
+# Miscellaneous
+/.angular/cache
+.sass-cache/
+/connect.lock
+/coverage
+/libpeerconnection.log
+testem.log
+/typings
 
-.idea/scssLintPlugin.xml
-
-.idea/vcs.xml
-
-.idea/watcherTasks.xml
+# System files
+.DS_Store
+Thumbs.db
