--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@ng-bootstrap/ng-bootstrap": "^14.1.1",
     "@popperjs/core": "^2.11.6",
-    "bootstrap": "^5.2.3",
     "http-proxy-middleware": "^2.0.6",
-    "ngx-bootstrap": "^10.2.0",
+    "primeicons": "^6.0.1",
+    "primeng": "^15.4.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
@@ -47,7 +47,6 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
     "postcss": "^8.4.21",
-    "tailwindcss": "^3.3.1",
     "typescript": "~4.9.4"
   }
 }
