--- a/angular.json
+++ b/angular.json
@@ -98,6 +98,7 @@
             ],
             "styles": [
               "src/styles.scss",
+              "node_modules/typeface-lato/index.css", 
               "node_modules/@fortawesome/fontawesome-free/css/all.css",
               "node_modules/primeng/resources/themes/lara-light-blue/theme.css",
               "node_modules/primeng/resources/primeng.min.css"
