--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "primeng": "^15.4.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "typeface-lato": "^1.1.13",
     "zone.js": "~0.12.0"
   },
   "devDependencies": {
