--- a/amplify.yml
+++ b/amplify.yml
@@ -4,12 +4,14 @@ frontend:
     preBuild:
       commands:
         - npm ci
+        - npm install -g @angular/cli
+
     build:
       commands:
         - ng build --prod
   artifacts:
     # IMPORTANT - Please verify your build output directory
-    baseDirectory: dist/
+    baseDirectory: dist/Laumond
     files:
       - '**/*'
   cache:
