--- a/amplify.yml
+++ b/amplify.yml
@@ -8,7 +8,7 @@ frontend:
 
     build:
       commands:
-        - ng build --prod
+        - ng build
   artifacts:
     # IMPORTANT - Please verify your build output directory
     baseDirectory: dist/Laumond
