add path to amplify.yml

--- a/amplify.yml
+++ b/amplify.yml
@@ -11,7 +11,7 @@ frontend:
         - ng build
   artifacts:
     # IMPORTANT - Please verify your build output directory
-    baseDirectory: dist/Laumond
+    baseDirectory: dist/patrick-laumond 
     files:
       - '**/*'
   cache:
