--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,8 +23,9 @@
 
   "paths": {
     "@components/*": ["src/app/components/*"],
-    "@services/*": ["app/services/*"],
+    "@pages/*": ["src/app/pages/*"],
     "@assets/*": ["src/assets/*"],
+    "@interfaces/*": ["src/interfaces/*"],
     "@environments/*": ["src/environments/*"],
 
   },
