--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "typeface-lato": "^1.1.13",
-    "zone.js": "~0.12.0"
+    "zone.js": "^0.12.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.2.4",
@@ -51,15 +51,17 @@
     "@types/jest": "^29.5.2",
     "autoprefixer": "^10.4.14",
     "babel-jest": "^29.5.0",
+    "cypress": "^12.16.0",
     "jasmine-core": "~4.5.0",
     "jest": "^29.5.0",
+    "jest-preset-angular": "^13.1.1",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
     "postcss": "^8.4.21",
-    "ts-jest": "^29.1.0",
+    "ts-jest": "^29.1.1",
     "typescript": "~4.9.4"
   }
 }
