--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,15 +20,13 @@
     ],
     "resolveJsonModule": true,
     "strict": true,
-
-  "paths": {
-    "@components/*": ["src/app/components/*"],
-    "@pages/*": ["src/app/pages/*"],
-    "@assets/*": ["src/assets/*"],
-    "@interfaces/*": ["src/interfaces/*"],
-    "@environments/*": ["src/environments/*"],
-
-  },
+    "paths": {
+      "@components/*": ["src/app/components/*"],
+      "@pages/*": ["src/app/pages/*"],
+      "@assets/*": ["src/assets/*"],
+      "@interfaces/*": ["src/interfaces/*"],
+      "@environments/*": ["src/environments/*"]
+    }
   },
   "angularCompilerOptions": {
     "strictTemplates": true,
@@ -39,4 +37,3 @@
     "node_modules"
   ]
 }
-
