--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -4,6 +4,8 @@
   "compilerOptions": {
     "outDir": "./out-tsc/spec",
     "types": [
+      "jest",
+      "node",
       "jasmine",
       "@angular/localize"
     ]
