--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "jest"
+    "test": "jest",
+    "cy:open": "cypress open"
   },
   "private": true,
   "dependencies": {
@@ -47,6 +48,7 @@
     "@babel/plugin-proposal-decorators": "^7.22.5",
     "@babel/preset-env": "^7.22.5",
     "@babel/preset-typescript": "^7.22.5",
+    "@cypress/webpack-preprocessor": "^5.17.1",
     "@types/jasmine": "~4.3.0",
     "@types/jest": "^29.5.2",
     "autoprefixer": "^10.4.14",
@@ -62,6 +64,7 @@
     "karma-jasmine-html-reporter": "~2.0.0",
     "postcss": "^8.4.21",
     "ts-jest": "^29.1.1",
+    "ts-loader": "^9.4.4",
     "typescript": "~4.9.4"
   }
 }
